
= ruote-amqp


== 2.1.12 not yet released

- :durable path by belucid
- 1 MQ per dispatch thread 'leak' fix. Thanks weifeng365
- RuoteAMQP::Participant --> RuoteAMQP::ParticipantProxy


== 2.0.0 not released

* Compatible with ruote 2.0
  * Thanks to John Mettraux (http://github.com/jmettraux/ruote-amqp)
  * Thanks to Jason & Jordan (http://github.com/asm/ruote-amqp)
  * Thanks to Charles Magid (http://github.com/ChasManRors/ruote-amqp)

== 0.9.21.1 2009-08-03

* Switch to using persistent AMQP messages by default

== 0.9.21 2009-07-13

* Depend on ruote-0.9.21 for flexible JSON backends
* Support for default queues
* Support for mapping participant names to queue names
* Plenty of RDOC fixed

== 0.9.20 2009-07-13

* 1 major enhancement:
  * Initial release
